@@ -96,10 +96,9 @@ extern int calc_item_power(const object *op, int flag);
 extern const typedata *get_typedata(int itemtype);
 extern const typedata *get_typedata_by_name(const char *name);
 extern char *describe_resistance(const object *op, int newline);
-extern char *query_weight(const object *op);
+extern const char *query_weight(const object *op);
 extern char *get_levelnumber(int i);
 extern char *get_number(int i);
-extern char *ring_desc(const object *op);
 extern const char *query_short_name(const object *op);
 extern char *query_name(const object *op);
 extern const char *query_base_name(const object *op, int plural);
@@ -181,7 +180,7 @@ extern void update_position(mapstruct *m, int x, int y);
 extern void set_map_reset_time(mapstruct *map);
 extern int out_of_map(mapstruct *m, int x, int y);
 extern mapstruct *get_map_from_coord(mapstruct *m, sint16 *x, sint16 *y);
-extern void get_rangevector(object *op1, object *op2, rv_vector *retval, int flags);
+extern void get_rangevector(object *op1, const object *op2, rv_vector *retval, int flags);
 extern void get_rangevector_from_mapcoord(const mapstruct *m, int x, int y, const object *op2, rv_vector *retval, int flags);
 extern int on_same_map(const object *op1, const object *op2);
 /* object.c */
@@ -265,7 +264,7 @@ extern char *strerror_local(int errnum);
 extern int isqrt(int n);
 extern char *ltostr10(signed long n);
 extern char *doubletostr10(double v);
-extern void save_long(char *buf, char *name, long n);
+extern void save_long(char *buf, const char *name, long n);
 extern void save_long_long(char *buf, char *name, sint64 n);
 extern FILE *open_and_uncompress(const char *name, int flag, int *compressed);
 extern void close_and_delete(FILE *fp, int compressed);
@@ -298,7 +297,6 @@ extern object *get_random_mon(int level);
 extern char *mon_desc(const object *mon);
 extern object *get_next_mon(object *tmp);
 extern char *mon_info_msg(int level, int booksize);
-extern char *artifact_msg(int level, int booksize);
 extern char *spellpath_msg(int level, int booksize);
 extern void make_formula_book(object *book, int level);
 extern char *msgfile_msg(int level, int booksize);
